<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bs_node_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_node"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.8"
            android:text="@string/btn_add_node" />

        <Button
            android:id="@+id/btn_Previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.8"
            android:enabled="false"
            android:text="@string/btn_previous" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/btn_search_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.8"
            android:enabled="false"
            android:text="@string/btn_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:gravity="right"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_info_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/tv_info_parent"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
